--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Kerene_1.0.exe"
+export_path="../LudumJam 48 - Kerene/Kerene_1.1.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
